ディレクトリ修正

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,14 +6,14 @@ html {
   @apply text-gray-800 font-sans text-base;
 }
 
-.sectionBoad {
+.sectionBoard {
   @apply bg-yellow-600 rounded-sm bg-opacity-50 shadow-md;
 }
 
-.recipeListBoad {
+.recipeListBoard {
   @apply bg-red-50 rounded-sm bg-opacity-50 shadow-md max-w-2xl mx-auto;
 }
 
-.viewRecipeBotton {
+.viewRecipeButton {
   @apply bg-red-300 bg-opacity-40 px-4 py-2 rounded-sm border-solid border-gray-800 border inline-block;
 }
